2008-07-21  Petr Ovtchenkov  <ptr@island.corbina.net>

	* type_traits.h: fix STLport version; use type_traits
	from STLport (it was derived from this type_traits.h and has
	fresh modifications).

2008-06-30  Petr Ovtchenkov  <ptr@island.corbina.net>

	* opts.h: free allocated objects;

	* libmisc: version 1.10.1.

	* opts.h, opts.cc: revision of options framework;
	insert object with type and type check into option;
	default value passed via [] operator;
	
	* libmisc: version 1.10.0.

2008-06-16  Petr Ovtchenkov  <yeti@yandex-team.ru>

	* opts.cc, opts.h: options parser, by Dmitry Osmakov.
	
	* libmisc: version 1.9.1.

2008-04-23  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Removed directory utils and node, not used a long time.
	
	* libmisc: version 1.9.0.

2007-08-17  Petr Ovtchenkov  <ptr@island.corbina.net>

	* type_traits.h: made code acceptable for gcc 3.3 [remove
	inline initialization of statics in template].

2007-08-03  Petr Ovtchenkov  <ptr@island.corbina.net>

	* type_traits.h: select appropriate TR1 type_traits implementation
	or use own, if not good one found [initial release].

2007-02-28  Petr Ovtchenkov  <ptr@island.corbina.net>

	* tfstream: fstream-like interface to unique temporary file;
	file generated from template with mkstemp [POSIX 1003.1-2001];
	template only, library not required; current implementation work
	only with STLport with extentions enabled.

2006-05-24  Petr Ovtchenkov  <ptr@island.corbina.net>

	* args.cc:  explicitly add stdexcept header.

2005-03-25  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* Makefile: revision of Makefiles---path to stlport lib and
	-lstlport went to common Makefiles.

2004-11-05  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* libmisc: library naming scheme changed.

2002-08-03  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* CyrMoney.cc: fix not cleared eof flag in strstreams.

	* libmisc: library renamed.

	* libmisc: version 1.8.1.

	* libmisc: library come to 'explore' source tree.
